--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="beard"></div>
         </div>
     
-        <h1>Happy holidays!</h1>
+        <h1 class="class">Happy holidays!</h1>
       </div>
     
 
